# Autoscaler

./: .air.toml  .cerbos-hub.yaml  .example.env  .gitignore  .golangci.yaml  .sauced.yaml  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  Earthfile  LICENSE  README.md  atlas.hcl  conventianal-commit.js  go.mod  go.sum  supertokens_readme.md
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/workflows/: on-pr.yml  on-stale-pr.yml  on-trunk-merge.yml  reuseable-check-crate.yml  weekly.yml
api/: .air.toml  main.go  otel.go
api/docs/: docs.go  swagger.json
api/middleware/: idempotent.go  otel.go
apps/: .gitignore  Cargo.toml  Shuttle.toml  env_variables.md
apps/api/: Cargo.toml  Dockerfile  go.mod  go.sum  main.go  supertokens.go
apps/apiold/: Cargo.toml
apps/apiold/src/: cerbos.rs  main.rs
apps/env_config/: Cargo.toml
apps/generate_docs/: Cargo.toml
apps/shared_setup/: Cargo.toml
apps/supertokens-web/: package.json
apps/web/: .gitignore  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json  turbowatch.ts
apps/worker/: Cargo.toml
assets/: erd.diagram
cli/jarvy/: Cargo.toml  Readme.md
deployments/: .gitignore  README.md
docker/: docker-compose-supertokens.yml  docker-compose.monitoring.yml  docker-compose.yml  setup.sh
docker/config/: loki-config.yaml  prometheus.yml  (+2 more)
docs/: README.md  hello-world.mdx
fern/: docs.yml  fern.config.json
internal/: README.md
pkg/: README.md
policy/: README.md
webapp/: Dockerfile  bun.lockb  next.config.js  package.json
website/: bun.lockb  next.config.js  package.json  pnpm-lock.yaml
(+287 files in other folders)
