[package]
name = "apiold"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[[bin]]
#name = "multi-binary"
#path = "src/shuttle.rs"

#[[bin]]
#name = "standalone"
#path = "src/standalone.rs"

[build-dependencies]
env_config = { path = "../env_config" }

[dependencies]
env_config = { path = "../env_config" }
async-stripe = { version = "0.31.0", features = ["runtime-tokio-hyper"] }
axum = "0.7.3"
axum-extra = { version = "0.9.1", features = ["cookie-private"] }
axum-macros = "0.4.0"
bcrypt = "0.15.0"
#cerbos = "0.4.5"
http = "1.0.0"
lettre = "0.11.4"
pyroscope = "0.5.7"
pyroscope_pprofrs = "0.2.7"
rand = "0.8.5"
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
shuttle-axum = "0.45.0"
shuttle-runtime = "0.45.0"
shuttle-shared-db = { version = "0.45.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.1", features = ["time"] }
time = { version = "0.3.20", features = ["serde"] }
tokio = "1.27.0"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
